deployment-scripts/staging/reelcruit-candidate-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reelcruit-candidate-staging
  namespace: staging
  labels:
    app: reelcruit-candidate-staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reelcruit-candidate-staging
  template:
    metadata:
      labels:
        app: reelcruit-candidate-staging
    spec:
      containers:
        - name: reelcruit
          image: reelcruitapp/reelcruit-candidate-frontend:staging
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: reelcruit-candidate-staging-svc
  namespace: staging
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: reelcruit-candidate-staging
